Fix baseline alignment of glosses for words which have subscripts

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -168,6 +168,11 @@ code {
   padding: 5px;
 }
 
+.corpusTextWord sub,
+.corpusTextWord sup {
+  line-height: 0;
+}
+
 .corpusTextLine {
   display: flex;
   flex-wrap: wrap;
